--- a/src/StudentTable.css
+++ b/src/StudentTable.css
@@ -1,3 +1,30 @@
 .table-title {
     text-align:center;
+
+
+.ReactTable .rt-thead {
+  overflow-y: scroll;
+}}
+
+.current-grade {
+    color: blue;
+    text-align:center;
+}
+.finished-grade {
+    color:green;
+    background-color:yellow;
+    width:100%;
+    height:100%;
+    text-align:center;
+
+}
+
+.cell-styling {
+    border-width: thin;
+    border-color:black;
+    border-style: solid;
+    padding:0 !important;
+    border-right:0 !important;
+    border-bottom:1px !important;
+
 }
